force-app/main/default/objects/QB_Supplier__c/QB_Supplier__c.object-meta.xml
<CustomObject>
    <label>QB Supplier</label>
    <nameField>
        <label>QB Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>