force-app/main/default/objects/QB_Supplier__c/fields/Last_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Time__c</fullName>
    <label>Last Updated Time</label>
    <type>DateTime</type>
</CustomField>