force-app/main/default/objects/QB_Supplier__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <label>Primary Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>