force-app/main/default/objects/QB_Supplier__c/fields/QB_Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Supplier_Id__c</fullName>
    <label>QB Supplier Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>