force-app/main/default/objects/QB_Supplier__c/fields/Record_Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Record_Create_Time__c</fullName>
    <label>Record Create Time</label>
    <type>DateTime</type>
</CustomField>