force-app/main/default/objects/QB_Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>